few things added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port=8090
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:file:~/customerDatabase
+spring.datasource.username=sa
+spring.datasource.password=
+server.port=8082
